--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "bootstrap": "^5.3.3",
@@ -31,8 +32,10 @@
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
