--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "use-sound": "^4.0.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
