--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
